2010-01-21  Kent Hansen  <kent.hansen@nokia.com>

Reviewed by Geoffrey Garen.

        Object.getOwnPropertyDescriptor always returns undefined for JS API objects
        https://bugs.webkit.org/show_bug.cgi?id=33946

        Ideally the getOwnPropertyDescriptor() reimplementation should return an
        access descriptor that wraps the property getter and setter callbacks, but
        that approach is much more involved than returning a value descriptor.
        Keep it simple for now.

        * API/JSCallbackObject.h:
        * API/JSCallbackObjectFunctions.h:
        (JSC::::getOwnPropertyDescriptor):
        * API/tests/testapi.js:

Canonical link: https://commits.webkit.org/45037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53638 268f45cc-cd09-0410-ab3c-d52691b4dbfc